--- a/css/style.css
+++ b/css/style.css
@@ -14,24 +14,24 @@ body {
 
 .container-fluid {
   width: 100%;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 15rem;
+  padding-right: 15rem;
   margin-right: auto;
   margin-left: auto;
-  margin-top: 50px;
+  margin-top: 5rem;
 }
 
-.container-fluid .searchform {
+.search-form {
   text-align: center;
   font-size: 2.5rem;
 }
 
-.container-fluid .searchform label {
+.search-form label {
   display: block;
   margin-bottom: 2rem;
 }
 
-.container-fluid .searchform input {
+.search-form input {
   display: inline-block;
   width: 500px;
   padding: .375rem .75rem;
@@ -42,5 +42,29 @@ body {
   background-clip: padding-box;
   border: 2px solid #ced4da;
   border-radius: .25rem;
+}
+
+.search-output .item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.search-output .item_description {
+  padding-left: 2rem;
+}
+
+.search-output .item_image {
+  width: 20rem;
+  display: inline-block;
+}
+
+.search-output .item_image img {
+  width: 100%;
 }
 /*# sourceMappingURL=style.css.map */
